# KubeRescue

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
kubrescue/: cli.py
kubrescue/config/: k8s_client.py
kubrescue/remediator/: actions.py
kubrescue/watcher/: monitor.py
tests/: test_monitor.py  test_remediator.py
