[project]
name = "kubrescue"
version = "0.1.0"
description = "Kubernetes Auto Remediation Engine"
authors = [{ name = "Sameer Alam" }]
dependencies = [
    "kubernetes",
    "typer[all]"
]

[project.scripts]
kubrescue = "kubrescue.cli:app"


[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "flake8",
    "bandit",
    "pre-commit",
    "mypy"
]
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true