[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kubrescue"
version = "0.1.0"
description = "Kubernetes Auto Remediation Engine"
authors = [{ name = "Sameer Alam" }]
dependencies = [
    "kubernetes",
    "typer[all]"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "flake8",
    "bandit",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-mock"
]

[project.scripts]
kubrescue = "kubrescue.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kubrescue*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true